Removed harsh corners from unpressed buttons